--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 <body>
     <div id="top">
         <div id="call">
-           <span><i class="fa-solid fa-phone"></i> Call: +01 123455678990</span>
+            <span><i class="fa-solid fa-phone"></i> Call: +01 123455678990</span>
         </div>
         <div id="mail">
             <span><i class="fa-solid fa-envelope"></i> Email: demo@gmail.com</span>
@@ -82,15 +82,17 @@
                 <img src="img/about-img.jpg" alt="about img">
             </div>
         </div>
-        <div id="second" class="content container primary-bg">
-            <div class="right-part">
-                <img src="img/professional-img.png" alt="usta">
-            </div>     
-            <div class="left-part">
-                <h1>We Provide professional home services.</h1>
-                <p>randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All randomised words which don't look even slightly</p>
-                <button class="btn orange-btn">Read more</button>
-            </div>   
+        <div id="second" class=" primary-bg">
+            <div class="content container">
+                <div class="right-part">
+                    <img src="img/professional-img.png" alt="usta">
+                </div>     
+                <div class="left-part">
+                    <h1>We Provide professional home services.</h1>
+                    <p>randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All randomised words which don't look even slightly</p>
+                    <button class="btn orange-btn">Read more</button>
+                </div> 
+            </div>  
         </div>
         <div class="services container">
             <h1>Our services</h1>
@@ -123,7 +125,7 @@
                         <input type="text" placeholder="Message" />
                 </form>
                 <div class="row-2">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.629242816125!2d49.806931175825056!3d40.3727445714467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4030634e4ec45f67%3A0xa1628495e445ab6a!2sDiv%20Academy!5e0!3m2!1sen!2saz!4v1720629623176!5m2!1sen!2saz" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.629242816125!2d49.806931175825056!3d40.3727445714467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4030634e4ec45f67%3A0xa1628495e445ab6a!2sDiv%20Academy!5e0!3m2!1sen!2saz!4v1720629623176!5m2!1sen!2saz" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
             <button class="btn blue-btn">Send</button>
